--- a/todo
+++ b/todo
@@ -1,8 +1,7 @@
 
 
 
-1. I need to make sure that the commands entered by the user are valid, they cannot use anything but alphanumerics for all the fields
-
+1. I need to make it print the user names
 
 
 
